Fixed footer cutoff issue for iScroll devices.

--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -12,8 +12,6 @@ footer
 {
     background-color: #111;
     color: #FFF;
-    position: relative;
-    z-index: 1;
 }
 
 footer [class*=col] { padding-bottom: 0; }
